# multiqc_dada2_plugin

./: .gitignore  Dockerfile  README.md  pyproject.toml
example_data/multi_run_study/: ERR1001_dada2_stats.tsv
example_data/single_run/: ERR1000_dada2_stats.tsv
src/dada2_plugin/: cli.py  hooks.py
src/dada2_plugin/modules/dada2/: __init__.py  dada2.py
